--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -1,43 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/layoutMenuLateral"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".TelaInicialActivity">
-    <include layout="@layout/toolbar"/>
+        android:fitsSystemWindows="true"
+
+        >
     <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-    >
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="216dp"
-            tools:layout_editor_absoluteX="110dp"
-            android:id="@+id/texto_tela_inicial"
-    />
-
-        <Button
-                android:id="@+id/btn_consultas"
+            tools:context=".TelaInicialActivity">
+        <include layout="@layout/toolbar"/>
+        <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+        >
+        <TextView
+                android:text="TextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Consultas" />
+                tools:layout_editor_absoluteY="216dp"
+                tools:layout_editor_absoluteX="110dp"
+                android:id="@+id/texto_tela_inicial"
+        />
 
-        <Button
-                android:id="@+id/btn_notificacao"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="notificações" />
+            <Button
+                    android:id="@+id/btn_consultas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Consultas" />
 
-        <Button
-                android:id="@+id/btn_pacientes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Pacientes" />
+            <Button
+                    android:id="@+id/btn_notificacao"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="notificações" />
+
+            <Button
+                    android:id="@+id/btn_pacientes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Pacientes" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+    <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/menu_lateral"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/menu_lateral_cabecalho"
+            app:menu="@menu/menu_lateral">
+
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
