--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -11,45 +11,32 @@
         >
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".TelaInicialActivity">
+
         <include layout="@layout/toolbar"/>
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-        >
-        <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:layout_editor_absoluteY="216dp"
-                tools:layout_editor_absoluteX="110dp"
-                android:id="@+id/texto_tela_inicial"
-        />
 
-            <Button
-                    android:id="@+id/btn_consultas"
+        <ScrollView android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerOpcoes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Consultas" />
+                    android:cacheColorHint="@android:color/transparent"
+                    android:clipToPadding="false"
+                    android:divider="@null"
+                    android:dividerHeight="0dp"
+                    android:listSelector="@android:color/transparent"
+                    android:scrollbarStyle="outsideOverlay"
+                    android:scrollbars="vertical">
+            </androidx.recyclerview.widget.RecyclerView>
 
-            <Button
-                    android:id="@+id/btn_notificacao"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="notificações" />
-
-            <Button
-                    android:id="@+id/btn_pacientes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Pacientes" />
-        </LinearLayout>
+        </ScrollView>
     </LinearLayout>
     <com.google.android.material.navigation.NavigationView
             android:layout_width="wrap_content"
